# Cervical_cancer_detection_model

./: Dockerfile  README.md  cervical-model.ipynb  cervical-model_final.ipynb  cervical_readme.md  pyproject.toml
app/: main.py  model.py  utils.py
streamlit/: app.py  requirements.txt
